--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -4,16 +4,15 @@
 }
 
 #two { 
-    color: blue;
+    color: rgb(0, 0, 255);
     font-size: 36px 
 }
 
-#three {
+.adjust-font-size {
     font-size: 24px
 }
 
 #four {
     background-color: rgb(144, 238, 144);
-    font-size: 24px;
     font-weight: bold;
 }
