Modify index.html and style.css

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,8 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
 
 img {
@@ -9,9 +12,27 @@ img {
 
 .title {
   font-size: 36px;
-  font-weight: 900;
+  font-weight: 900px;
+  text-align: center;
 }
 
+.content {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 52px;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+}
+
+.text {
+  text-align: center;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
