--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,8 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
+  text-align: center;
 }
 
 img {
@@ -13,25 +11,16 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900px;
-  text-align: center;
 }
 
 .content {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   gap: 52px;
 }
 
 .item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-}
-
-.text {
-  text-align: center;
+  max-width: 200px;
 }
 /* do not edit this footer */
 .footer {
