Add 'align-items' to .header

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -28,6 +28,7 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 1.2em;
   font-weight: bold;
 }
