--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -8,6 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  flex: 1;
 }
 
 img {
@@ -65,6 +66,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 16px;
 }
 
 button {
